--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -52,6 +52,8 @@ properties.integer.search.range.from.placeholder = Integer Placeholder Range Fro
 properties.integer.search.range.to.placeholder = Integer Placeholder Range To in Search
 properties.integer.error.NOT_NULLABLE = Integer not Nullable error
 properties.integer.error.TOO_LARGE = Integer too large error
+properties.integer.error.FROM_LARGER_THAN_TO = From larger than to
+properties.integer.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.integer_nullable.label = Integer Nullable
 properties.integer_nullable.placeholder = Integer Nullable Placeholder
@@ -60,6 +62,8 @@ properties.integer_nullable.search.range.to.label = Integer Nullable Range To in
 properties.integer_nullable.search.range.from.placeholder = Integer Nullable Placeholder Range From in Search
 properties.integer_nullable.search.range.to.placeholder = Integer Nullable Placeholder Range To in Search
 properties.integer_nullable.error.TOO_LARGE = Integer Nullable too large error
+properties.integer_nullable.error.FROM_LARGER_THAN_TO = From larger than to
+properties.integer_nullable.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.integer_values.label = Integer Values
 properties.integer_values.placeholder = Integer Values Placeholder
@@ -72,6 +76,8 @@ properties.integer_values.values.2 = two
 properties.integer_values.values.3 = three
 properties.integer_values.values.4 = four
 properties.integer_values.error.NOT_NULLABLE = Integer Values not Nullable error
+properties.integer_values.error.FROM_LARGER_THAN_TO = From larger than to
+properties.integer_values.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.integer_values_nullable.label = Integer Values Nullable
 properties.integer_values_nullable.placeholder = Integer Values Nullable Placeholder
@@ -84,6 +90,8 @@ properties.integer_values_nullable.values.2 = two
 properties.integer_values_nullable.values.3 = three
 properties.integer_values_nullable.values.4 = four
 properties.integer_values_nullable.null_value = null value
+properties.integer_values_nullable.error.FROM_LARGER_THAN_TO = From larger than to
+properties.integer_values_nullable.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.number.label = Number
 properties.number.placeholder = Number Placeholder
@@ -94,6 +102,8 @@ properties.number.search.range.to.placeholder = Number Placeholder Range To in S
 properties.number.error.NOT_NULLABLE = Number not Nullable error
 properties.number.error.TOO_LARGE = Number too large error
 properties.number.error.TOO_MANY_DECIMALS = Number too many decimals error
+properties.number.error.FROM_LARGER_THAN_TO = From larger than to
+properties.number.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.number_nullable.label = Number Nullable
 properties.number_nullable.placeholder = Number Nullable Placeholder
@@ -103,6 +113,8 @@ properties.number_nullable.search.range.from.placeholder = Number Nullable Place
 properties.number_nullable.search.range.to.placeholder = Number Nullable Placeholder Range To in Search
 properties.number_nullable.error.TOO_LARGE = Number Nullable too large error
 properties.number_nullable.error.TOO_MANY_DECIMALS = Number Nullable too many decimals error
+properties.number_nullable.error.FROM_LARGER_THAN_TO = From larger than to
+properties.number_nullable.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.number_values.label = Number Values
 properties.number_values.placeholder = Number Values Placeholder
@@ -115,6 +127,8 @@ properties.number_values.values.1_dot_1 = version 1.1
 properties.number_values.values.1_dot_2 = version 1.2
 properties.number_values.values.2 = version 2.0
 properties.number_values.error.NOT_NULLABLE = Number Values not Nullable error
+properties.number_values.error.FROM_LARGER_THAN_TO = From larger than to
+properties.number_values.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.number_values_nullable.label = Number Values Nullable
 properties.number_values_nullable.placeholder = Number Values Nullable Placeholder
@@ -127,6 +141,8 @@ properties.number_values_nullable.values.1_dot_1 = version 1.1
 properties.number_values_nullable.values.1_dot_2 = version 1.2
 properties.number_values_nullable.values.2 = version 2.0
 properties.number_values_nullable.null_value = null value
+properties.number_values_nullable.error.FROM_LARGER_THAN_TO = From larger than to
+properties.number_values_nullable.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.currency.label = Currency
 properties.currency.placeholder = Currency Placeholder
@@ -137,6 +153,8 @@ properties.currency.search.range.to.placeholder = Currency Placeholder Range To 
 properties.currency.error.NOT_NULLABLE = Currency not Nullable error
 properties.currency.error.TOO_LARGE = Currency too large error
 properties.currency.error.TOO_MANY_DECIMALS = Currency too many decimals error
+properties.currency.error.FROM_LARGER_THAN_TO = From larger than to
+properties.currency.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.currency_nullable.label = Currency Nullable
 properties.currency_nullable.placeholder = Currency Nullable Placeholder
@@ -146,6 +164,8 @@ properties.currency_nullable.search.range.from.placeholder = Currency Nullable P
 properties.currency_nullable.search.range.to.placeholder = Currency Nullable Placeholder Range To in Search
 properties.currency_nullable.error.TOO_LARGE = Currency Nullable too large error
 properties.currency_nullable.error.TOO_MANY_DECIMALS = Currency Nullable too many decimals error
+properties.currency_nullable.error.FROM_LARGER_THAN_TO = From larger than to
+properties.currency_nullable.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.date.label = Date
 properties.date.placeholder = Date Placeholder
@@ -155,6 +175,8 @@ properties.date.search.range.from.placeholder = Date Placeholder Range From in S
 properties.date.search.range.to.placeholder = Date Placeholder Range To in Search
 properties.date.error.NOT_NULLABLE = Date not Nullable error
 properties.date.error.INVALID_DATETIME = Date Invalid
+properties.date.error.FROM_LARGER_THAN_TO = From larger than to
+properties.date.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.date_nullable.label = Date Nullable
 properties.date_nullable.placeholder = Date Nullable Placeholder
@@ -163,6 +185,8 @@ properties.date_nullable.search.range.to.label = Date Nullable Range To in Searc
 properties.date_nullable.search.range.from.placeholder = Date Nullable Placeholder Range From in Search
 properties.date_nullable.search.range.to.placeholder = Date Nullable Placeholder Range To in Search
 properties.date_nullable.error.INVALID_DATETIME = Date Nullable Invalid
+properties.date_nullable.error.FROM_LARGER_THAN_TO = From larger than to
+properties.date_nullable.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.datetime.label = Datetime
 properties.datetime.placeholder = Datetime Placeholder
@@ -172,6 +196,8 @@ properties.datetime.search.range.from.placeholder = Datetime Placeholder Range F
 properties.datetime.search.range.to.placeholder = Datetime Placeholder Range To in Search
 properties.datetime.error.NOT_NULLABLE = Datetime not Nullable error
 properties.datetime.error.INVALID_DATETIME = Datetime Invalid
+properties.datetime.error.FROM_LARGER_THAN_TO = From larger than to
+properties.datetime.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.datetime_nullable.label = Datetime Nullable
 properties.datetime_nullable.placeholder = Datetime Nullable Placeholder
@@ -180,6 +206,8 @@ properties.datetime_nullable.search.range.to.label = Datetime Nullable Range To 
 properties.datetime_nullable.search.range.from.placeholder = Datetime Nullable Placeholder Range From in Search
 properties.datetime_nullable.search.range.to.placeholder = Datetime Nullable Placeholder Range To in Search
 properties.datetime_nullable.error.INVALID_DATETIME = Datetime Nullable Invalid
+properties.datetime_nullable.error.FROM_LARGER_THAN_TO = From larger than to
+properties.datetime_nullable.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.time.label = Time
 properties.time.placeholder = Time Placeholder
@@ -189,6 +217,8 @@ properties.time.search.range.from.placeholder = Time Placeholder Range From in S
 properties.time.search.range.to.placeholder = Time Placeholder Range To in Search
 properties.time.error.NOT_NULLABLE = Time not Nullable error
 properties.time.error.INVALID_DATETIME = Time Invalid
+properties.time.error.FROM_LARGER_THAN_TO = From larger than to
+properties.time.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.time_nullable.label = Time Nullable
 properties.time_nullable.placeholder = Time Nullable Placeholder
@@ -197,6 +227,8 @@ properties.time_nullable.search.range.to.label = Time Nullable Range To in Searc
 properties.time_nullable.search.range.from.placeholder = Time Nullable Placeholder Range From in Search
 properties.time_nullable.search.range.to.placeholder = Time Nullable Placeholder Range To in Search
 properties.time_nullable.error.INVALID_DATETIME = Time Nullable Invalid
+properties.time_nullable.error.FROM_LARGER_THAN_TO = From larger than to
+properties.time_nullable.error.TO_SMALLER_THAN_FROM = To smaller than from
 
 properties.location.label = Location
 properties.location.placeholder = Location Placeholder
@@ -280,6 +312,8 @@ properties.integer.search.range.to.label = Valor Entero en Modo Búsqueda Hasta
 properties.integer.search.range.to.placeholder = Valor Entero Marcador en Modo Búsqueda Hasta
 properties.integer.error.NOT_NULLABLE = Valor Entero error de no Nullable
 properties.integer.error.TOO_LARGE = Valor Entero demasiado larga error
+properties.integer.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.integer.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.integer_nullable.label = Valor Entero Nullable
 properties.integer_nullable.placeholder = Valor Entero Nullable Marcador
@@ -288,6 +322,8 @@ properties.integer_nullable.search.range.from.placeholder = Valor Entero Nullabl
 properties.integer_nullable.search.range.to.label = Valor Entero en Modo Nullable Búsqueda Hasta
 properties.integer_nullable.search.range.to.placeholder = Valor Entero Nullable Marcador en Modo Búsqueda Hasta
 properties.integer_nullable.error.TOO_LARGE = Valor Entero Nullable demasiado larga error
+properties.integer_nullable.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.integer_nullable.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.integer_values.label = Valor Entero Valores
 properties.integer_values.placeholder = Valor Entero Valores Marcador
@@ -300,6 +336,8 @@ properties.integer_values.values.2 = dos
 properties.integer_values.values.3 = tres
 properties.integer_values.values.4 = cuatro
 properties.integer_values.error.NOT_NULLABLE = Valor Entero Valores error de no Nullable
+properties.integer_values.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.integer_values.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.integer_values_nullable.label = Valor Entero Valores Nullable
 properties.integer_values_nullable.placeholder = Valor Entero Valores Nullable Marcador
@@ -312,6 +350,8 @@ properties.integer_values_nullable.values.2 = dos
 properties.integer_values_nullable.values.3 = tres
 properties.integer_values_nullable.values.4 = cuatro
 properties.integer_values_nullable.null_value = valor null
+properties.integer_values_nullable.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.integer_values_nullable.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.number.label = Valor Numérico
 properties.number.placeholder = Valor Numérico Marcador
@@ -322,6 +362,8 @@ properties.number.search.range.to.placeholder = Valor Numérico Marcador en Modo
 properties.number.error.NOT_NULLABLE = Valor Numérico error de no Nullable
 properties.number.error.TOO_LARGE = Valor Numérico demasiado larga error
 properties.number.error.TOO_MANY_DECIMALS = Valor Numérico demasiados decimales error
+properties.number.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.number.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.number_nullable.label = Valor Numérico Nullable
 properties.number_nullable.placeholder = Valor Numérico Nullable Marcador
@@ -331,6 +373,8 @@ properties.number_nullable.search.range.to.label = Valor Numérico en Modo Nulla
 properties.number_nullable.search.range.to.placeholder = Valor Numérico Nullable Marcador en Modo Búsqueda Hasta
 properties.number_nullable.error.TOO_LARGE = Valor Numérico Nullable demasiado larga error
 properties.number_nullable.error.TOO_MANY_DECIMALS = Valor Numérico Nullable demasiados decimales error
+properties.number_nullable.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.number_nullable.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.number_values.label = Valor Numérico Valores
 properties.number_values.placeholder = Valor Numérico Valores Marcador
@@ -343,7 +387,8 @@ properties.number_values.values.1_dot_1 = Versión 1.1
 properties.number_values.values.1_dot_2 = Versión 1.2
 properties.number_values.values.2 = Versión 2.0
 properties.number_values.error.NOT_NULLABLE = Valor Numérico Valores error de no Nullable
-
+properties.number_values.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.number_values.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.number_values_nullable.label = Valor Numérico Valores Nullable
 properties.number_values_nullable.placeholder = Valor Numérico Valores Nullable Marcador
@@ -356,6 +401,8 @@ properties.number_values_nullable.values.1_dot_1 = Versión 1.1
 properties.number_values_nullable.values.1_dot_2 = Versión 1.2
 properties.number_values_nullable.values.2 = Versión 2.0
 properties.number_values_nullable.null_value = valor null
+properties.number_values_nullable.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.number_values_nullable.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.currency.label = Valor Monetario
 properties.currency.placeholder = Valor Monetario Marcador
@@ -366,6 +413,8 @@ properties.currency.search.range.to.placeholder = Valor Monetario Marcador en Mo
 properties.currency.error.NOT_NULLABLE = Valor Monetario error de no Nullable
 properties.currency.error.TOO_LARGE = Valor Monetario demasiado larga error
 properties.currency.error.TOO_MANY_DECIMALS = Valor Monetario demasiados decimales error
+properties.currency.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.currency.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.currency_nullable.label = Valor Monetario Nullable
 properties.currency_nullable.placeholder = Valor Monetario Nullable Marcador
@@ -375,6 +424,8 @@ properties.currency_nullable.search.range.to.label = Valor Monetario Nullable en
 properties.currency_nullable.search.range.to.placeholder = Valor Monetario Nullable Marcador en Modo Búsqueda Hasta
 properties.currency_nullable.error.TOO_LARGE = Valor Monetario Nullable demasiado larga error
 properties.currency_nullable.error.TOO_MANY_DECIMALS = Valor Monetario Nullable demasiados decimales error
+properties.currency_nullable.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.currency_nullable.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.date.label = Fecha
 properties.date.placeholder = Fecha Marcador
@@ -384,6 +435,8 @@ properties.date.search.range.to.label = Fecha en Modo Búsqueda Hasta
 properties.date.search.range.to.placeholder = Fecha Marcador en Modo Búsqueda Hasta
 properties.date.error.NOT_NULLABLE = Fecha error de no Nullable
 properties.date.error.INVALID_DATETIME = Fecha error de invalida
+properties.date.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.date.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.date_nullable.label = Fecha Nullable
 properties.date_nullable.placeholder = Fecha Nullable Marcador
@@ -392,6 +445,8 @@ properties.date_nullable.search.range.from.placeholder = Fecha Nullable Marcador
 properties.date_nullable.search.range.to.label = Fecha Nullable en Modo Búsqueda Hasta
 properties.date_nullable.search.range.to.placeholder = Fecha Nullable Marcador en Modo Búsqueda Hasta
 properties.date_nullable.error.INVALID_DATETIME = Fecha Nullable error de invalida
+properties.date_nullable.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.date_nullable.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.datetime.label = Fecha con Tiempo
 properties.datetime.placeholder = Fecha con Tiempo Marcador
@@ -401,6 +456,8 @@ properties.datetime.search.range.to.label = Fecha con Tiempo en Modo Búsqueda H
 properties.datetime.search.range.to.placeholder = Fecha con Tiempo Marcador en Modo Búsqueda Hasta
 properties.datetime.error.NOT_NULLABLE = Fecha con Tiempo error de no Nullable
 properties.datetime.error.INVALID_DATETIME = Fecha con Tiempo error de invalida
+properties.datetime.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.datetime.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.datetime_nullable.label = Fecha con Tiempo Nullable
 properties.datetime_nullable.placeholder = Fecha con Tiempo Nullable Marcador
@@ -409,6 +466,8 @@ properties.datetime_nullable.search.range.from.placeholder = Fecha con Tiempo Nu
 properties.datetime_nullable.search.range.to.label = Fecha con Tiempo Nullable en Modo Búsqueda Hasta
 properties.datetime_nullable.search.range.to.placeholder = Fecha con Tiempo Nullable Marcador en Modo Búsqueda Hasta
 properties.datetime_nullable.error.INVALID_DATETIME = Fecha con Tiempo Nullable error de invalida
+properties.datetime_nullable.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.datetime_nullable.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.time.label = Tiempo
 properties.time.placeholder = Tiempo Marcador
@@ -418,6 +477,8 @@ properties.time.search.range.to.label = Tiempo en Modo Búsqueda Hasta
 properties.time.search.range.to.placeholder = Tiempo Marcador en Modo Búsqueda Hasta
 properties.time.error.NOT_NULLABLE = Tiempo error de no Nullable
 properties.time.error.INVALID_DATETIME = Tiempo error de invalida
+properties.time.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.time.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.time_nullable.label = Tiempo Nullable
 properties.time_nullable.placeholder = Tiempo Nullable Marcador
@@ -426,6 +487,8 @@ properties.time_nullable.search.range.from.placeholder = Tiempo Nullable Marcado
 properties.time_nullable.search.range.to.label = Tiempo Nullable en Modo Búsqueda Hasta
 properties.time_nullable.search.range.to.placeholder = Tiempo Nullable Marcador en Modo Búsqueda Hasta
 properties.time_nullable.error.INVALID_DATETIME = Tiempo Nullable error de invalida
+properties.time_nullable.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.time_nullable.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.location.label = Ubicación
 properties.location.placeholder = Ubicación Marcador
