--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -32,6 +32,7 @@ properties.string_values.values.one = one
 properties.string_values.values.two = two
 properties.string_values.values.three = three
 properties.string_values.values.four = four
+properties.string_values.null_value = null value
 properties.string_values.error.NOT_NULLABLE = String Values not Nullable error
 
 properties.string_values_nullable.label = String Values Nullable
@@ -75,6 +76,7 @@ properties.integer_values.values.1 = one
 properties.integer_values.values.2 = two
 properties.integer_values.values.3 = three
 properties.integer_values.values.4 = four
+properties.integer_values.null_value = null value
 properties.integer_values.error.NOT_NULLABLE = Integer Values not Nullable error
 properties.integer_values.error.FROM_LARGER_THAN_TO = From larger than to
 properties.integer_values.error.TO_SMALLER_THAN_FROM = To smaller than from
@@ -126,6 +128,7 @@ properties.number_values.values.1 = version 1.0
 properties.number_values.values.1_dot_1 = version 1.1
 properties.number_values.values.1_dot_2 = version 1.2
 properties.number_values.values.2 = version 2.0
+properties.number_values.null_value = Unspecified Version
 properties.number_values.error.NOT_NULLABLE = Number Values not Nullable error
 properties.number_values.error.FROM_LARGER_THAN_TO = From larger than to
 properties.number_values.error.TO_SMALLER_THAN_FROM = To smaller than from
@@ -292,6 +295,7 @@ properties.string_values.values.one = uno
 properties.string_values.values.two = dos
 properties.string_values.values.three = tres
 properties.string_values.values.four = cuatro
+properties.string_values.null_value = valor null
 properties.string_values.error.NOT_NULLABLE = String Valores error de no Nullable
 
 properties.string_values_nullable.label = String Valores Nullable
@@ -335,6 +339,7 @@ properties.integer_values.values.1 = uno
 properties.integer_values.values.2 = dos
 properties.integer_values.values.3 = tres
 properties.integer_values.values.4 = cuatro
+properties.integer_values.null_value = valor null
 properties.integer_values.error.NOT_NULLABLE = Valor Entero Valores error de no Nullable
 properties.integer_values.error.FROM_LARGER_THAN_TO = Mayor que el hacia
 properties.integer_values.error.TO_SMALLER_THAN_FROM = Menor que el desde
@@ -386,6 +391,7 @@ properties.number_values.values.1 = Versión 1.0
 properties.number_values.values.1_dot_1 = Versión 1.1
 properties.number_values.values.1_dot_2 = Versión 1.2
 properties.number_values.values.2 = Versión 2.0
+properties.number_values.null_value = Versión sin Especificar
 properties.number_values.error.NOT_NULLABLE = Valor Numérico Valores error de no Nullable
 properties.number_values.error.FROM_LARGER_THAN_TO = Mayor que el hacia
 properties.number_values.error.TO_SMALLER_THAN_FROM = Menor que el desde
