--- a/data/cyclingexchangehub/index.properties
+++ b/data/cyclingexchangehub/index.properties
@@ -38,6 +38,7 @@ file_uploader_delete_file = Delete File
 image_uploader_delete_file = Delete Picture
 
 rare_properties_label = More Options
+uncommon_properties_label = Additional Options
 
 [es]
 name = Español
@@ -79,3 +80,4 @@ file_uploader_delete_file = Borrar Archivo
 image_uploader_delete_file = Borrar Foto
 
 rare_properties_label = Más Opciones
+uncommon_properties_label = Opciones Adicionales
