--- a/data/cyclingexchangehub/index.properties
+++ b/data/cyclingexchangehub/index.properties
@@ -38,7 +38,9 @@ file_uploader_delete_file = Delete File
 image_uploader_delete_file = Delete Picture
 
 rare_properties_label = More Options
-uncommon_properties_label = Additional Options
+moderate_properties_label = Additional Options
+
+callout_exclude_warning = Warning!... this will mark your item as incomplete
 
 [es]
 name = Español
@@ -80,4 +82,6 @@ file_uploader_delete_file = Borrar Archivo
 image_uploader_delete_file = Borrar Foto
 
 rare_properties_label = Más Opciones
-uncommon_properties_label = Opciones Adicionales
+moderate_properties_label = Opciones Adicionales
+
+callout_exclude_warning = Atención!... esto marcará su item como Incompleto
