--- a/data/__internal__/test/vehicle/index.properties
+++ b/data/__internal__/test/vehicle/index.properties
@@ -4,6 +4,14 @@ searchFormTitle = Search For a Vehicle
 createFormTitle = Post a New Vehicle
 editFormTitle = Edit your Vehicle
 
+items.chasis.name = Vehicle Chasis
+items.chasis.exclusionSelectorLabel = The chasis is missing
+items.chasis.exclusionTernarySelectorLabel = Select whether the chasis must be included or not
+items.chasis.excludedLabel = The chasis is missing
+items.chasis.includedLabel = Includes a chasis
+items.chasis.anyLabel = Any
+items.chasis.calloutExcludedLabel = No Chasis
+
 properties.vehicle_type.label = Vehicle Type
 properties.vehicle_type.placeholder = Select the Type of your Vehicle
 properties.vehicle_type.search.label = Vehicle Type
@@ -38,6 +46,14 @@ name = Vehículo
 searchFormTitle = Busque un Vehículo
 createFormTitle = Postee un nuevo Vehículo
 editFormTitle = Edite su Vehículo
+
+items.chasis.name = Chasis del Vehículo
+items.chasis.exclusionSelectorLabel = Falta el Chasis
+items.chasis.exclusionTernarySelectorLabel = Seleccione si necesita que el chasis sea incluido o no
+items.chasis.excludedLabel = Falta el chasis
+items.chasis.includedLabel = Incluye el chasis
+items.chasis.anyLabel = Cualquiera
+items.chasis.calloutExcludedLabel = Sin Chasis
 
 properties.vehicle_type.label = Tipo de Vehículo
 properties.vehicle_type.placeholder = Seleccione el tipo de su Vehículo
