--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -53,6 +53,7 @@ properties.integer.search.range.from.placeholder = Integer Placeholder Range Fro
 properties.integer.search.range.to.placeholder = Integer Placeholder Range To in Search
 properties.integer.error.NOT_NULLABLE = Integer not Nullable error
 properties.integer.error.TOO_LARGE = Integer too large error
+properties.integer.error.TOO_SMALL = Integer too large error
 properties.integer.error.FROM_LARGER_THAN_TO = From larger than to
 properties.integer.error.TO_SMALLER_THAN_FROM = To smaller than from
 
@@ -63,6 +64,7 @@ properties.integer_nullable.search.range.to.label = Integer Nullable Range To in
 properties.integer_nullable.search.range.from.placeholder = Integer Nullable Placeholder Range From in Search
 properties.integer_nullable.search.range.to.placeholder = Integer Nullable Placeholder Range To in Search
 properties.integer_nullable.error.TOO_LARGE = Integer Nullable too large error
+properties.integer_nullable.error.TOO_SMALL = Integer Nullable too small error
 properties.integer_nullable.error.FROM_LARGER_THAN_TO = From larger than to
 properties.integer_nullable.error.TO_SMALLER_THAN_FROM = To smaller than from
 
@@ -103,6 +105,7 @@ properties.number.search.range.from.placeholder = Number Placeholder Range From 
 properties.number.search.range.to.placeholder = Number Placeholder Range To in Search
 properties.number.error.NOT_NULLABLE = Number not Nullable error
 properties.number.error.TOO_LARGE = Number too large error
+properties.number.error.TOO_SMALL = Number too small error
 properties.number.error.TOO_MANY_DECIMALS = Number too many decimals error
 properties.number.error.FROM_LARGER_THAN_TO = From larger than to
 properties.number.error.TO_SMALLER_THAN_FROM = To smaller than from
@@ -114,6 +117,7 @@ properties.number_nullable.search.range.to.label = Number Nullable Range To in S
 properties.number_nullable.search.range.from.placeholder = Number Nullable Placeholder Range From in Search
 properties.number_nullable.search.range.to.placeholder = Number Nullable Placeholder Range To in Search
 properties.number_nullable.error.TOO_LARGE = Number Nullable too large error
+properties.number_nullable.error.TOO_SMALL = Number Nullable too small error
 properties.number_nullable.error.TOO_MANY_DECIMALS = Number Nullable too many decimals error
 properties.number_nullable.error.FROM_LARGER_THAN_TO = From larger than to
 properties.number_nullable.error.TO_SMALLER_THAN_FROM = To smaller than from
@@ -316,6 +320,7 @@ properties.integer.search.range.to.label = Valor Entero en Modo Búsqueda Hasta
 properties.integer.search.range.to.placeholder = Valor Entero Marcador en Modo Búsqueda Hasta
 properties.integer.error.NOT_NULLABLE = Valor Entero error de no Nullable
 properties.integer.error.TOO_LARGE = Valor Entero demasiado larga error
+properties.integer.error.TOO_SMALL = Valor Entero demasiado pequeño error
 properties.integer.error.FROM_LARGER_THAN_TO = Mayor que el hacia
 properties.integer.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
@@ -326,6 +331,7 @@ properties.integer_nullable.search.range.from.placeholder = Valor Entero Nullabl
 properties.integer_nullable.search.range.to.label = Valor Entero en Modo Nullable Búsqueda Hasta
 properties.integer_nullable.search.range.to.placeholder = Valor Entero Nullable Marcador en Modo Búsqueda Hasta
 properties.integer_nullable.error.TOO_LARGE = Valor Entero Nullable demasiado larga error
+properties.integer_nullable.error.TOO_SMALL = Valor Entero Nullable demasiado pequeño error
 properties.integer_nullable.error.FROM_LARGER_THAN_TO = Mayor que el hacia
 properties.integer_nullable.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
@@ -366,6 +372,7 @@ properties.number.search.range.to.label = Valor Numérico en Modo Búsqueda Hast
 properties.number.search.range.to.placeholder = Valor Numérico Marcador en Modo Búsqueda Hasta
 properties.number.error.NOT_NULLABLE = Valor Numérico error de no Nullable
 properties.number.error.TOO_LARGE = Valor Numérico demasiado larga error
+properties.number.error.TOO_SMALL = Valor Numérico demasiado pequeño error
 properties.number.error.TOO_MANY_DECIMALS = Valor Numérico demasiados decimales error
 properties.number.error.FROM_LARGER_THAN_TO = Mayor que el hacia
 properties.number.error.TO_SMALLER_THAN_FROM = Menor que el desde
@@ -377,6 +384,7 @@ properties.number_nullable.search.range.from.placeholder = Valor Numérico Nulla
 properties.number_nullable.search.range.to.label = Valor Numérico en Modo Nullable Búsqueda Hasta
 properties.number_nullable.search.range.to.placeholder = Valor Numérico Nullable Marcador en Modo Búsqueda Hasta
 properties.number_nullable.error.TOO_LARGE = Valor Numérico Nullable demasiado larga error
+properties.number_nullable.error.TOO_SMALL = Valor Numérico Nullable demasiado pequeño error
 properties.number_nullable.error.TOO_MANY_DECIMALS = Valor Numérico Nullable demasiados decimales error
 properties.number_nullable.error.FROM_LARGER_THAN_TO = Mayor que el hacia
 properties.number_nullable.error.TO_SMALLER_THAN_FROM = Menor que el desde
