--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "react-dropzone": "^10.1.3",
-    "webpack-bundle-analyzer": "^3.1.0"
+    "webpack-bundle-analyzer": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
@@ -47,6 +47,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "colors": "^1.3.3",
+    "convert-units": "^2.3.4",
     "css-loader": "^2.1.1",
     "deep-equal": "^1.0.1",
     "fast-html-parser": "^1.0.1",
@@ -63,7 +64,7 @@
     "null-loader": "^0.1.1",
     "pretty-bytes": "^5.1.0",
     "properties-reader": "0.0.16",
-    "react": "^16.8.4",
+    "react": "^16.8.6",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.4",
     "react-jss": "^8.6.1",
