--- a/data/__internal__/test/item_definition/index.properties
+++ b/data/__internal__/test/item_definition/index.properties
@@ -151,6 +151,20 @@ properties.number_values_nullable.null_value = null value
 properties.number_values_nullable.error.FROM_LARGER_THAN_TO = From larger than to
 properties.number_values_nullable.error.TO_SMALLER_THAN_FROM = To smaller than from
 
+properties.unit.label = Unit
+properties.unit.placeholder = Unit Placeholder
+properties.unit.search.range.from.label = Unit Range From in Search
+properties.unit.search.range.to.label = Unit Range To in Search
+properties.unit.search.range.from.placeholder = Unit Placeholder Range From in Search
+properties.unit.search.range.to.placeholder = Unit Placeholder Range To in Search
+properties.unit.error.INVALID_SUBTYPE_VALUE = Unit Subtype error
+properties.unit.error.NOT_NULLABLE = Unit not Nullable error
+properties.unit.error.TOO_SMALL = Unit too small error
+properties.unit.error.TOO_LARGE = Unit too large error
+properties.unit.error.TOO_MANY_DECIMALS = Unit too many decimals error
+properties.unit.error.FROM_LARGER_THAN_TO = From larger than to
+properties.unit.error.TO_SMALLER_THAN_FROM = To smaller than from
+
 properties.currency.label = Currency
 properties.currency.placeholder = Currency Placeholder
 properties.currency.search.range.from.label = Currency Range From in Search
@@ -417,6 +431,20 @@ properties.number_values_nullable.values.2 = Versión 2.0
 properties.number_values_nullable.null_value = valor null
 properties.number_values_nullable.error.FROM_LARGER_THAN_TO = Mayor que el hacia
 properties.number_values_nullable.error.TO_SMALLER_THAN_FROM = Menor que el desde
+
+properties.unit.label = Unidad
+properties.unit.placeholder = Unidad Marcador
+properties.unit.search.range.from.label = Unidad en Modo Búsqueda Desde
+properties.unit.search.range.from.placeholder = Unidad Marcador en Modo Búsqueda Desde
+properties.unit.search.range.to.label = Unidad en Modo Búsqueda Hasta
+properties.unit.search.range.to.placeholder = Unidad Marcador en Modo Búsqueda Hasta
+properties.unit.error.INVALID_SUBTYPE_VALUE = Unidad error de Subtipo
+properties.unit.error.NOT_NULLABLE = Unidad error de no Nullable
+properties.unit.error.TOO_SMALL = Unidad demasiado pequeña error
+properties.unit.error.TOO_LARGE = Unidad demasiado larga error
+properties.unit.error.TOO_MANY_DECIMALS = Unidad demasiados decimales error
+properties.unit.error.FROM_LARGER_THAN_TO = Mayor que el hacia
+properties.unit.error.TO_SMALLER_THAN_FROM = Menor que el desde
 
 properties.currency.label = Valor Monetario
 properties.currency.placeholder = Valor Monetario Marcador
