--- a/data/cyclingexchangehub/index.properties
+++ b/data/cyclingexchangehub/index.properties
@@ -42,6 +42,11 @@ moderate_properties_label = Additional Options
 
 callout_exclude_warning = Warning!... this will mark your item as incomplete
 
+unit_dialog_title = Select an Unit
+unit_dialog_others = Other Units
+unit_dialog_metric = Metric
+unit_dialog_imperial = Imperial
+
 [es]
 name = Español
 number_decimal_separator = ,
@@ -85,3 +90,8 @@ rare_properties_label = Más Opciones
 moderate_properties_label = Opciones Adicionales
 
 callout_exclude_warning = Atención!... esto marcará su item como Incompleto
+
+unit_dialog_title = Seleccione una Unidad
+unit_dialog_others = Otras Unidades
+unit_dialog_metric = Métricas
+unit_dialog_imperial = Imperiales
