wizard in progress

--- a/data/__internal__/users/user.properties
+++ b/data/__internal__/users/user.properties
@@ -1,7 +1,6 @@
 [en]
 name = User
-searchFormTitle = Log In
-searchFormTitleAlt = Find Users
+searchFormTitle = Find Users
 createFormTitle = Sign Up
 editFormTitle = Edit Profile
 
@@ -26,7 +25,6 @@ properties.password.error.TOO_LARGE = Password too long
 [es]
 name = Usuario
 searchFormTitle = Iniciar Sesión
-searchFormTitleAlt = Buscar Usuario
 createFormTitle = Regristrarse
 editFormTitle = Editar Perfil
 
