--- a/data/cyclingexchangehub/index.properties
+++ b/data/cyclingexchangehub/index.properties
@@ -41,6 +41,10 @@ extended_properties_wizard_label = General Information
 base_properties_wizard_label = Specifications
 moderate_properties_wizard_label = Additional Info
 rare_properties_wizard_label = Special Specifications
+wizard_next = Next
+wizard_prev = Prev
+wizard_submit = Submit
+wizard_invalid_message = Some information is incomplete/invalid
 moderate_properties_label = Additional Options
 rare_properties_label = More Options
 
@@ -94,6 +98,10 @@ extended_properties_wizard_label = Información General
 base_properties_wizard_label = Especificaciones
 moderate_properties_wizard_label = Información Adicional
 rare_properties_wizard_label = Atributos Especiales
+wizard_next = Siguiente
+wizard_prev = Anterior
+wizard_submit = Finalizar
+wizard_invalid_message = Parte de la información está incompleta o es inválida
 moderate_properties_label = Opciones Adicionales
 rare_properties_label = Más Opciones
 
