added fancy properties

--- a/data/__internal__/users/user.properties
+++ b/data/__internal__/users/user.properties
@@ -22,6 +22,20 @@ properties.password.placeholder = Password
 properties.password.error.NOT_NULLABLE = Missing password
 properties.password.error.TOO_LARGE = Password too long
 
+properties.role.label = Role
+properties.role.placeholder = Choose an user role
+properties.role.search.label = Search Role
+properties.role.search.placeholder = Specify a role to search
+properties.role.values.user = User
+properties.role.values.moderator = Moderator
+properties.role.values.admin = Admin
+properties.role.null_value = Unspecified
+properties.role.error.NOT_NULLABLE = Missing Role
+
+properties.banned_until.label = Banned Until
+properties.banned_until.placeholder = Banned Until
+properties.banned_until.error.INVALID_DATETIME = Invalid Date
+
 [es]
 name = Usuario
 searchFormTitle = Iniciar Sesión
@@ -45,3 +59,17 @@ properties.password.label = Contraseña
 properties.password.placeholder = Contraseña
 properties.password.error.NOT_NULLABLE = Falta la contraseña
 properties.password.error.TOO_LARGE = La contraseña es demasiado larga
+
+properties.role.label = Rol
+properties.role.placeholder = Seleccione el Rol del Usuario
+properties.role.search.label = Buscar Rol
+properties.role.search.placeholder = Especifíque un rol para la Búsqueda
+properties.role.values.user = Usuario
+properties.role.values.moderator = Moderador
+properties.role.values.admin = Administrador
+properties.role.null_value = Sin Especificar
+properties.role.error.NOT_NULLABLE = Falta el Rol
+
+properties.banned_until.label = Banear hasta la fecha
+properties.banned_until.placeholder = Banear hasta la fecha
+properties.banned_until.error.INVALID_DATETIME = Fecha Inválida
