--- a/data/__internal__/users/user.properties
+++ b/data/__internal__/users/user.properties
@@ -13,6 +13,7 @@ properties.username.error.TOO_LARGE = Username is too long
 
 properties.email.label = Email
 properties.email.placeholder = Your email address
+properties.email.description = Your email will not be shared with anyone, it is kept private even to admins and moderators
 properties.email.error.NOT_NULLABLE = Missing email
 properties.email.error.TOO_LARGE = Email is too long
 properties.email.error.INVALID_SUBTYPE_VALUE = Email is invalid
@@ -36,6 +37,10 @@ properties.banned_until.label = Banned Until
 properties.banned_until.placeholder = Banned Until
 properties.banned_until.error.INVALID_DATETIME = Invalid Date
 
+properties.address.label = Address (optional)
+properties.address.placeholder = Type your address
+properties.address.description = This address is used only for ease of use and it is not shared with anyone, not even admins or mods. It is used to prefill information for transactions.
+
 [es]
 name = Usuario
 searchFormTitle = Iniciar Sesión
@@ -51,6 +56,7 @@ properties.username.error.TOO_LARGE = El nombre de usuario es demasiado largo
 
 properties.email.label = Email
 properties.email.placeholder = Dirección de correo electrónico
+properties.email.description = Tu correo no será compartido con nadie, se mantendrá privado incluso para administradores y moderadores
 properties.email.error.NOT_NULLABLE = Falta el correo electrónico
 properties.email.error.TOO_LARGE = El correo electrónico es demasiado largo
 properties.email.error.INVALID_SUBTYPE_VALUE = El correo electrónico es inválido
@@ -73,3 +79,7 @@ properties.role.error.NOT_NULLABLE = Falta el Rol
 properties.banned_until.label = Banear hasta la fecha
 properties.banned_until.placeholder = Banear hasta la fecha
 properties.banned_until.error.INVALID_DATETIME = Fecha Inválida
+
+properties.address.label = Dirección (opcional)
+properties.address.placeholder = Escriba su Dirección
+properties.address.description = La Dirección no será compartida con nadie, ni siquiera admins o moderadores. Sólo existe como utilidad para auto-completar la información de transacciones.
