--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "knex": "^0.17.0-next3",
     "react-dropzone": "^10.1.3",
     "webpack-bundle-analyzer": "^3.3.2"
   },
@@ -60,7 +61,6 @@
     "mini-css-extract-plugin": "^0.5.0",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
-    "npm": "^6.9.0",
     "null-loader": "^0.1.1",
     "pretty-bytes": "^5.1.0",
     "properties-reader": "0.0.16",
