--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "install": "tsc",
     "build": "webpack && webpack --config ./webpack.config.production.js && node ./dist/core/builder/index.js",
-    "start": "node ./dist/core/server/index.js"
+    "webpack-dev": "webpack",
+    "webpack-prod": "webpack --config ./webpack.config.production.js",
+    "build-data": "node ./dist/core/builder/index.js",
+    "start": "node ./dist/core/server/index.js",
+    "build-database": "node ./dist/core/dbbuilder/index.js"
   },
   "author": "Edward Gonzalez",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
     "knex": "^0.17.0-next3",
+    "pg": "^7.11.0",
     "react-dropzone": "^10.1.3",
     "webpack-bundle-analyzer": "^3.3.2"
   },
