--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "knex": "^0.17.0-next3",
+    "knex": "^0.16.5",
     "pg": "^7.11.0",
+    "prompt-confirm": "^2.0.4",
     "react-dropzone": "^10.1.3",
     "webpack-bundle-analyzer": "^3.3.2"
   },
@@ -37,6 +38,7 @@
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.0.7",
     "@types/node": "^10.12.30",
+    "@types/pg": "^7.4.14",
     "@types/pretty-bytes": "^5.1.0",
     "@types/properties-reader": "0.0.1",
     "@types/react": "^16.8.8",
